--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -17,6 +17,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+    <com.example.my_first_app.OverlayViewObjectOnly
+        android:id="@+id/overlayViewObjectOnly"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/previewView"
+        app:layout_constraintBottom_toBottomOf="@id/previewView"
+        app:layout_constraintStart_toStartOf="@id/previewView"
+        app:layout_constraintEnd_toEndOf="@id/previewView" />
 
     <!-- Map hiển thị dưới PreviewView -->
     <ImageView
@@ -41,12 +49,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/btnCancelDestination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Huỷ lệnh" />
-
 
     <!-- Nút chức năng -->
     <LinearLayout
@@ -60,6 +62,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+
+        <Button
+            android:id="@+id/btnCancelDestination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Huỷ lệnh"
+            android:layout_marginEnd="24dp" />
         <Button
             android:id="@+id/btnLoadMap"
             android:layout_width="wrap_content"
